# rapina

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yml  ci.yml  docs.yml  issue-claim.yml  labeler.yml  release.yml  scorecard.yml  welcome.yml
docs/: config.toml
docs/content/: changelog.md  roadmap.md  support.md
docs/content/blog/: 2026-02-10-welcome-to-blog.md
docs/content/docs/: _index.md
docs/content/docs/cli/: _index.md  commands.md
docs/content/docs/core-concepts/: _index.md  authentication.md  database.md  errors.md  extractors.md  metrics.md  routing.md
docs/content/docs/getting-started/: _index.md  configuration.md  installation.md
docs/content/docs/introduction/: _index.md  community.md  manifesto.md  what-is-rapina.md
docs/content/guide/: database.md  extractors.md
docs/sass/: style.scss
docs/templates/: base.html  changelog.html  docs-base.html  docs-section.html  index.html  page.html  roadmap.html  section.html  support.html
rapina/: Cargo.toml
rapina-cli/: Cargo.toml
rapina-cli/src/: main.rs
rapina-cli/src/commands/: add.rs  dev.rs  import_openapi.rs  migrate.rs  mod.rs  new.rs
rapina-macros/: Cargo.toml
rapina-macros/src/: lib.rs
rapina-macros/src/schema/: analyze.rs  generate.rs  mod.rs  parse.rs  types.rs
rapina/benches/: router.rs
rapina/examples/: auth.rs  endpoint_groups.rs  json.rs  macros.rs  todo_api.rs
rapina/examples/todo-app/: Cargo.toml
rapina/examples/todo-app/src/: entity.rs  main.rs
rapina/examples/todo-app/src/migrations/: m20260214_000001_create_todos.rs  mod.rs
rapina/examples/todo-app/src/todos/: dto.rs  error.rs  handlers.rs
rapina/examples/websocket-chat/: Cargo.toml
rapina/examples/websocket-chat/src/: index.html  main.rs
rapina/src/: app.rs  config.rs  context.rs  database.rs  discovery.rs  error.rs  extract.rs  handler.rs  lib.rs  migration.rs  response.rs  router.rs  state.rs  test.rs  websocket.rs
rapina/src/auth/: middleware.rs  mod.rs
rapina/src/introspection/: endpoint.rs  route_info.rs
rapina/src/metrics/: middleware.rs  mod.rs  prometheus.rs
rapina/src/middleware/: body_limit.rs  compression.rs  mod.rs  rate_limit.rs  request_log.rs  timeout.rs  trace_id.rs
rapina/src/observability/: mod.rs  tracing.rs
rapina/src/openapi/: endpoint.rs  mod.rs  spec.rs
rapina/src/router/: mod.rs  trie.rs
rapina/src/testing/: client.rs  mod.rs
rapina/tests/: discovery.rs  error_handling.rs  extractors.rs  metrics.rs  middleware.rs  migration_test.rs  relay.rs  routing.rs  schema_test.rs  websocket.rs
