[package]
name = "rapina-cli"
version = "0.5.0"
edition = "2024"
description = "CLI tool for Rapina web framework - create and run Rapina projects"
license = "MIT"
repository = "https://github.com/arferreira/rapina"
documentation = "https://github.com/arferreira/rapina"
readme = "../README.md"
keywords = ["web", "framework", "cli", "rapina"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "rapina"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
notify = { version = "6", default-features = false, features = [
  "macos_kqueue",
] }
notify-debouncer-mini = "0.4"
ctrlc = "3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
