[package]
name = "rapina-cli"
version = "0.8.0"
edition = "2024"
rust-version = "1.85"
description = "CLI tool for Rapina web framework - create and run Rapina projects"
license = "MIT"
repository = "https://github.com/rapina-rs/rapina"
documentation = "https://github.com/rapina-rs/rapina"
readme = "../README.md"
keywords = ["web", "framework", "cli", "rapina"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "rapina"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
notify = { version = "8", default-features = false, features = [
  "macos_kqueue",
] }
notify-debouncer-mini = "0.4"
ctrlc = "3"
toml = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"], optional = true }
sea-schema = { version = "0.16", optional = true, default-features = false }
sqlx = { version = "0.8", optional = true }
openapiv3 = { version = "2", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

[features]
default = []
import = ["tokio"]
import-postgres = [
    "import",
    "sea-schema/postgres",
    "sea-schema/discovery",
    "sea-schema/runtime-tokio-rustls",
    "sea-schema/sqlx-postgres",
    "sqlx/runtime-tokio-rustls",
    "sqlx/postgres",
]
import-mysql = [
    "import",
    "sea-schema/mysql",
    "sea-schema/discovery",
    "sea-schema/runtime-tokio-rustls",
    "sea-schema/sqlx-mysql",
    "sqlx/runtime-tokio-rustls",
    "sqlx/mysql",
]
import-sqlite = [
    "import",
    "sea-schema/sqlite",
    "sea-schema/discovery",
    "sea-schema/runtime-tokio-rustls",
    "sea-schema/sqlx-sqlite",
    "sqlx/runtime-tokio-rustls",
    "sqlx/sqlite",
]
import-openapi = ["dep:openapiv3", "dep:serde_yaml_ng"]
