[package]
name = "rapina-macros"
version = "0.5.0"
edition = "2024"
description = "Procedural macros for the Rapina web framework"
license = "MIT"
repository = "https://github.com/arferreira/rapina"
documentation = "https://docs.rs/rapina-macros"
keywords = ["web", "framework", "macros", "rapina"]
categories = ["web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1"
proc-macro2 = "1"
heck = "0.5"
