[package]
name = "rapina"
version = "0.5.0"
edition = "2024"
description = "A fast, type-safe web framework for Rust inspired by FastAPI"
license = "MIT"
repository = "https://github.com/arferreira/rapina"
documentation = "https://docs.rs/rapina"
readme = "../README.md"
keywords = ["web", "framework", "http", "async", "api"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
# Async
tokio = { version = "1.49.0", features = ["full"] }

# HTTP server
hyper = { version = "1.8.1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1.19", features = [
  "tokio",
  "client-legacy",
  "http1",
] }
http = "1.4.0"
http-body-util = "0.1.3"
bytes = "1.11.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_urlencoded = "0.7"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

uuid = { version = "1", features = ["v4"] }

# Environtment
dotenvy = "0.15.7"

# OpenAPI
schemars = { version = "1.2.0", features = ["chrono04"] }

# JWT Authentication
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }

# Rate Limiting
dashmap = "6.1.0"

# Compression
flate2 = "1.1"

# Our macros
rapina-macros = { version = "0.5.0", path = "../rapina-macros/" }

# Database (optional)
sea-orm = { version = "1.1", optional = true, features = ["runtime-tokio-rustls"] }

# Database migration (Optional)
sea-orm-migration = { version = "1.1", optional = true, features = ["runtime-tokio-rustls"] }
async-trait = { version = "0.1", optional = true }

# Prometheus (optional)
prometheus = { version = '0.13', optional = true }

[features]
default = []
database = ["sea-orm", "sea-orm-migration", "async-trait"]
postgres = ["database", "sea-orm/sqlx-postgres", "sea-orm-migration/sqlx-postgres"]
mysql = ["database", "sea-orm/sqlx-mysql", "sea-orm-migration/sqlx-mysql"]
sqlite = ["database", "sea-orm/sqlx-sqlite", "sea-orm-migration/sqlx-sqlite"]
metrics = ["prometheus"]